--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -1,7 +1,8 @@
 name: Format code
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - '**'
   pull_request:
     branches: [ "main" ]
     
