--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "updateDB": "node ./src/bin/dbUpdater.js"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "astro": "^4.2.1",
     "mongodb": "^6.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "read-excel-file": "^5.7.1",
     "tailwindcss": "^3.4.1"
   }
 }
