--- a/package.json
+++ b/package.json
@@ -7,18 +7,20 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "updateDB": "node ./src/bin/dbUpdater.js"
+    "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^8.2.0",
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.2.1",
+    "joi": "^17.12.1",
     "mongodb": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
     "read-excel-file": "^5.7.1",
     "tailwindcss": "^3.4.1"
   }
