--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "deploy": "SERVER_KEY_PATH=cert.key SERVER_CERT_PATH=cert.crt HOST=0.0.0.0 PORT=4321 node ./dist/server/entry.mjs"
+    "start": "SERVER_KEY_PATH=cert.key SERVER_CERT_PATH=cert.crt HOST=0.0.0.0 PORT=4321 node ./dist/server/entry.mjs"
   },
   "dependencies": {
     "@astrojs/node": "^8.2.0",
